--- a/2.GoodPractices.Rmd
+++ b/2.GoodPractices.Rmd
@@ -9,7 +9,7 @@ runtime: shiny_prerendered
 bibliography: references.bib
 ---
 
-These learning resources are available at [Zenodo](http://doi.org/10.5281/zenodo.1435503).
+These learning resources are available at [GitHub](https://github.com/mnavascues/ABCRFtutorial) & [Zenodo](http://doi.org/10.5281/zenodo.1435503).
 
 ## Setup (tl;dr)
 
